# whatsapp-rust-bridge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.ts  package.json  rollup.config.js  tsconfig.json
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benches/: audio.ts  binary.ts  crypto.ts  curve.ts  image.ts  signal.ts
codegen/: Cargo.toml
codegen/src/: main.rs  proto_gen.rs
examples/: connect.ts
scripts/: build-dual.ts  build-wasm.mjs  gen-protobufjs-dts.ts
src/: appstate.rs  audio.rs  audio_waveform.rs  binary.rs  binary_api.rs  camel_serializer.rs  client_profile.rs  crypto.rs  crypto_api.rs  curve.rs  device_props.rs  errors.rs  generated_proto_types.rs  generated_types.rs  group_cipher.rs  group_types.rs  image_utils.rs  js_backend.rs  js_cache_store.rs  js_crypto.rs  js_http.rs  js_time.rs  js_transport.rs  key_helper.rs  key_helper_api.rs  lib.rs  libsignal_api.rs  libsignal_store.rs  logger.rs  noise_session.rs  proto.rs  protocol_address.rs  result_types.rs  runtime.rs  sender_key_name.rs  session_builder.rs  session_builder_api.rs  session_cipher.rs  session_cipher_api.rs  session_record.rs  (+8 more)
test/: audio.test.ts  binary.test.ts  crypto-parity.test.ts  curve.test.ts  group_cipher.test.ts  handshake-parity.test.ts  image.test.ts  keyhelper.test.ts  libsignal.test.ts  migration.test.ts  parity.test.ts  protocol_address.test.ts  sender_key_migration.test.ts  server-response-parity.test.ts  session_builder.test.ts  session_cipher.test.ts  session_record.test.ts  signal-test-utils.ts  sticker_metadata.test.ts  storage_adapter.test.ts
test/helpers/: fake_audio.ts  fake_storage.ts
tests/: e2e-connect.test.ts  e2e-messaging.test.ts  helpers.ts  offline-starvation.test.ts  proto-roundtrip.test.ts  proto-sendmessage.test.ts  test_oneof.rs  types.test.ts  wasm-concurrency.test.ts
ts/: binary.ts  index.d.ts  index.ts  libsignal.ts  libsignal_storage_adapter.js  macro.d.ts  macro.ts  node-crypto-provider.ts  proto-namespace.ts  proto-types.d.ts  proto-types.ts  proto.ts  session_record.ts
types/: generated.d.ts  index.d.ts
