[package]
name = "whatsapp-rust-bridge"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O4",
    "--gufa-optimizing",
    "--inlining-optimizing",
    "--ignore-implicit-traps",
    "--traps-never-happen",
    "--coalesce-locals-learning",
    "--converge",
    # Enable modern WASM features for better optimization
    "--enable-simd",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
    "--enable-sign-ext",
    "--enable-mutable-globals",
    "--enable-multivalue",
    # Additional optimization passes
    "--fast-math",
    "--zero-filled-memory",
    "--dce",
    "--vacuum",
    "--directize",
    "--optimize-stack-ir",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.89"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
curve25519-dalek = { version = "4.1.3", default-features = false, features = [
  "alloc",
  "digest",
] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
js-sys = "0.3"
log = "0.4"
prost = { version = "0.14.1", default-features = false }
rand = { version = "0.9.2", default-features = false, features = [
  "std",
  "std_rng",
] }
serde = { version = "1.0.228", default-features = false, features = [
  "derive",
  "alloc",
] }
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11"
simd-adler32 = { version = "0.3.7", default-features = false, features = [
  "std",
] }

wacore-appstate = { git = "https://github.com/jlucaso1/whatsapp-rust.git", branch = "main", package = "wacore-appstate" }
wacore-binary = { git = "https://github.com/jlucaso1/whatsapp-rust.git", branch = "main", features = [
  "serde",
] }
wacore-libsignal = { git = "https://github.com/jlucaso1/whatsapp-rust.git", branch = "main", package = "wacore-libsignal" }
waproto = { git = "https://github.com/jlucaso1/whatsapp-rust.git", branch = "main", package = "waproto" }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.55"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
