[package]
name = "whatsapp-rust-bridge"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O4",
    "--gufa-optimizing",
    "--inlining-optimizing",
    "--ignore-implicit-traps",
    "--traps-never-happen",
    "--coalesce-locals-learning",
    "--converge",
    # Enable modern WASM features for better optimization
    "--enable-simd",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
    "--enable-sign-ext",
    "--enable-mutable-globals",
    "--enable-multivalue",
    # Additional optimization passes
    "--fast-math",
    "--zero-filled-memory",
    "--dce",
    "--vacuum",
    "--directize",
    "--optimize-stack-ir",
    "--strip-debug",
]

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
audio = ["dep:symphonia"]
image = ["dep:image"]
sticker = ["dep:img-parts"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
async-channel = { version = "2.5.0", default-features = false, features = ["std"] }
async-lock = { version = "3", default-features = false }
async-trait = "0.1.89"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bytes = { version = "1.5", default-features = false }
console_error_panic_hook = "0.1"
console_log = { version = "1", features = ["color"] }
futures = { version = "0.3", default-features = false, features = ["alloc", "async-await"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
# Ensure all getrandom usages (including via rand in whatsapp-rust) get wasm_js support
# This doesn't modify whatsapp-rust — Cargo unifies features across the dependency graph
image = { version = "0.25.5", default-features = false, features = [
  "jpeg",
  "png",
  "webp",
], optional = true }

img-parts = { version = "0.4", default-features = false, optional = true }
js-sys = "0.3"
log = "0.4"
prost = { version = "0.14.1", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
symphonia = { version = "0.5.4", default-features = false, features = [
  "mp3",
  "aac",
  "isomp4",
  "ogg",
], optional = true }
talc = { version = "4.4", default-features = false, features = ["lock_api"] }
tsify-next = { version = "0.5", default-features = false, features = ["js"] }
uuid = { version = "1.18.1", default-features = false, features = ["v4", "js"] }

wacore = { version = "0.4.2", features = ["js"] }
wacore-appstate = "0.4.2"
wacore-binary = { version = "0.4.2", features = ["serde"] }
waproto = { version = "0.4.2", features = ["serde-deserialize"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.55"
wasm-streams = "0.5"
web-sys = { version = "0.3", features = [
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "WritableStream",
  "Window",
] }
whatsapp-rust = { version = "0.4.2", default-features = false, features = ["debug-diagnostics"] }

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true

# Optimized with function names for profiling: bun run build:profile
[profile.profiling]
inherits = "release"
strip = false
debug = 2
lto = false
