[package]
name = "bridge-codegen"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "gen-types"
path = "src/main.rs"

[[bin]]
name = "gen-proto-types"
path = "src/proto_gen.rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "visit"] }
walkdir = "2"
